# build-env

./: .gitignore  Dockerfile  Jenkinsfile  README.md  simple_validation.py  webservice_validation.py
webservice-validation/: pyproject.toml  setup.py
webservice-validation/src/webservice_validation/: webservice_validation.py
webservice-validation/tests/: test_webservice_validation.py
webservice-validation/tests/data/: validation.yml
